# TetherModManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Source/: BackgroundTask.cpp  BackgroundTask.h  Installer.cpp  Installer.h  Log.cpp  Log.h  StrUtil.cpp  StrUtil.h  Translation.cpp  Translation.h  WindowsFunctions.cpp  WindowsFunctions.h
Source/Game/: Game.cpp  Game.h  Launch.cpp  Launch.h  Mods.cpp  Mods.h  Profile.cpp  Profile.h
Source/Net/: Net.cpp  Net.h  Thunderstore.cpp  Thunderstore.h
Source/UI/: AppUI.cpp  AppUI.h  Sidebar.cpp  Sidebar.h  TitleBar.cpp  TitleBar.h
Source/UI/Elements/: AppButton.hpp  LaunchButton.hpp  ModEntry.hpp  ModFilter.hpp  ModInfoHeader.hpp  ModPageButton.hpp  ProfileButton.hpp  ProfileListElement.hpp  Separator.hpp  SettingsElement.hpp  SidebarButton.hpp  TitleBar.hpp  TitleBarButton.hpp  TitleBarElement.hpp  WarnMessage.hpp
Source/UI/Tabs/: AppTab.cpp  AppTab.h  LaunchTab.cpp  LaunchTab.h  ModsTab.cpp  ModsTab.h  ProfileTab.cpp  ProfileTab.h  SettingsTab.cpp  SettingsTab.h
UI/: Common.kui  LaunchTab.kui  ModsTab.kui  ProfileTab.kui  Settings.kui  Sidebar.kui  TitleBar.kui
app/saved/: game_path.txt  settings.json
app/translation/: en.json
src/: main.cpp
src/ui/: MainElement.hpp
ui/: main.kui
